# updated

./: .gitignore  BUNDLE_SUPPORT.md  CONTROLPLANE_API_CONTRACT.md  Cargo.toml  LICENSE  LIFECYCLE_PROVIDER.md  LIFECYCLE_STATE_MACHINE.md  README.md  TRANSITION_WRAPPERS.md  WALKTHROUGH.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: app.rs  durable.rs  guardian.rs  log.rs  main.rs  rand.rs  record.rs  supervisor.rs
crates/bootstrap/src/sys/: mod.rs  unix.rs  windows.rs
crates/bootstrap/tests/: cli.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: harness.rs  main.rs
crates/e2e/src/scenarios/: adoption.rs  application.rs  chaos.rs  locking.rs  mod.rs  oneshot.rs  rejection.rs  security.rs  self_update.rs  unix.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: durable.rs  lib.rs  log.rs  time.rs
crates/oneshot/: Cargo.toml
crates/oneshot/src/: main.rs
crates/sampleapp/: Cargo.toml  build.rs
crates/sampleapp-reexec/: Cargo.toml
crates/sampleapp-reexec/src/: main.rs
crates/sampleapp/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/supervisor/: Cargo.toml  build.rs
crates/supervisor/src/: app.rs  boot.rs  domain.rs  guardian.rs  main.rs  options.rs  schedule.rs  selection.rs  self_update.rs  store.rs  tests.rs  update.rs
crates/update-client/: Cargo.toml
crates/update-client/src/: lib.rs
crates/updated/: Cargo.toml
crates/updated-tuf/: Cargo.toml
crates/updated-tuf/src/: lib.rs  policy.rs  repo.rs  select.rs
crates/updated-tuf/tests/: roundtrip.rs
crates/updated/src/: apply.rs  bundle.rs  config.rs  env.rs  gc.rs  hash.rs  health.rs  lib.rs  lock.rs  log.rs  on_launch.rs  provider.rs  rand.rs  reject.rs  state.rs  transaction.rs
crates/windows-service/: Cargo.toml
crates/windows-service/src/: main.rs
deploy/: README.md  config.toml
deploy/launchd/: com.example.selfupdate-supervisor.plist
deploy/systemd/: selfupdate-supervisor.service
deploy/windows/: install-selfupdate-supervisor.bat  test-scm-e2e.ps1
schemas/: desired-deployment.schema.json  provider-set.schema.json  target-reference.schema.json
schemas/examples/: desired-deployment.json  provider-set.json
scripts/: control-plane-fuzz.sh  haproxy-activate.sh  linux-haproxy-e2e.sh  macos-publish-fuzz.sh  macos-smoke.sh
