[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
foundation = { path = "../foundation" }
updated = { path = "../updated" }
updated-tuf = { path = "../updated-tuf" }
tokio = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
same-file = { workspace = true }
